practice sidebar positions

--- a/html-css/youtube.html
+++ b/html-css/youtube.html
@@ -32,6 +32,29 @@
         </div>
     </header>
 
+    <nav class="sidebar">
+        <div class="sidebar-link">
+            <img src="home.svg" alt="">
+            <div>Home</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="home.svg" alt="">
+            <div>Home</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="home.svg" alt="">
+            <div>Home</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="home.svg" alt="">
+            <div>Home</div>
+        </div>
+           
+    </nav>
+
+
+    </div>
+
     <div class="video-grid">
     <div class="video-preview">
         <div class="thumbnail-row">
